[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/player/a/A.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player/Player.gd" type="Script" id=2]
[ext_resource path="res://entities/player/states/Moving.gd" type="Script" id=3]
[ext_resource path="res://entities/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://entities/player/states/Dying.gd" type="Script" id=5]
[ext_resource path="res://entities/player/player.png" type="Texture" id=6]
[ext_resource path="res://entities/advanced-camera2d/AdvancedCamera2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/player/states/Dead.gd" type="Script" id=8]
[ext_resource path="res://entities/hp-bar/HpBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/player/states/Winning.gd" type="Script" id=10]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.236735, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.506122, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 6 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.244898, 0.390909 ), 0.0, 0.0, 0, 0, Vector2( 0.412245, 0.8 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="Animation" id=5]
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 0 ),
"update": 0,
"values": [ 16, 24, 24, 31 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 0 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 0 ),
"update": 0,
"values": [ 8, 13 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 8, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=9]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.4, 0.6, 0.7, 1, 1.3, 1.5 ),
"transitions": PoolRealArray( 0.5, 2, 1, 0.5, 2, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, -10 ), Vector2( 5, 0 ), Vector2( 5, 0 ), Vector2( 0, -10 ), Vector2( -3, 0 ), Vector2( -3, 0 ), Vector2( -2.07583, -3.08058 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("Sprite/AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "idle", "walking", "idle", "walking", "idle", "walking" ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.8, 1.2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )
SCREAM_SCENE = ExtResource( 1 )
HP_BAR_OPACITY_CURVE = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="ScreamClear" type="Timer" parent="StateMachine/Moving"]
wait_time = 0.5
one_shot = true

[node name="AutoScream" type="Timer" parent="StateMachine/Moving"]
wait_time = 0.3

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Duration" type="Timer" parent="StateMachine/Dying"]

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Winning" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Duration" type="Timer" parent="StateMachine/Winning"]
wait_time = 3.0
one_shot = true

[node name="Camera" parent="." instance=ExtResource( 7 )]
SHAKE_INTENSITY_CURVE = SubResource( 3 )
SHAKE_AMPLITUDE = 5.0
SHAKE_DURATION = 0.5

[node name="Hurtbox" type="Area2D" parent="."]
monitoring = false
collision_layer = 2147483652
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 6 )
vframes = 8
hframes = 8
frame = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
playback_speed = 0.8
anims/dying = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walking = SubResource( 7 )
anims/winning = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/winning = SubResource( 9 )

[node name="ScreamingContainer" type="Node2D" parent="."]
position = Vector2( 0, -16 )

[node name="HpBar" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -24 )
[connection signal="reached_win_area" from="." to="StateMachine/Moving" method="_on_Player_reached_win_area"]
[connection signal="timeout" from="StateMachine/Moving/ScreamClear" to="StateMachine/Moving" method="_on_ScreamClear_timeout"]
[connection signal="timeout" from="StateMachine/Moving/AutoScream" to="StateMachine/Moving" method="_on_AutoScream_timeout"]
[connection signal="timeout" from="StateMachine/Dying/Duration" to="StateMachine/Dying" method="_on_Duration_timeout"]
[connection signal="timeout" from="StateMachine/Winning/Duration" to="StateMachine/Winning" method="_on_Duration_timeout"]
